# NLP_Assignment_3

./: .dockerignore  .gitignore  docker-compose.yml  eval_dataset.json  evaluate_rag.py  main.py  pyproject.toml  requirements.txt
api/: Dockerfile  app.py  config.py  requirements.txt
api/routes/: documents.py  health.py  query.py
results/: metrics.json  qualitative_analysis.json
ui/: Dockerfile  app.py  requirements.txt
