[project]
name = "nlp-assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.59",
    "chromadb>=1.5.2",
    "flask>=3.1.3",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
]
